v112
    -More refactoring of source code
v111
    -Refactored source code
    -Add build sripts for Windows
v110
    -In BZip2 recompression add a new parameter to BZ2_bzCompressInit API.
     In BZip2 v1.0.3 maxLen was changed from 20 to 17. Test 20 if 17 fails.
     This is needed for older archives or recompression fails.
    -Revert minimum dictionary frequency to 19.
    -Some cleanup.
    -Change tempFile memory from 16MB to 64MB
    -Add english.dict from fxcm
v109
    -If minimum dictionary frequency=0 then use only static dictionary (-e0,dictionary)
    -Add verbose levels 0-3.
    -Remove some text colors.
v108
    -Merge VLI fix.
    -Fix BZ detection https://encode.su/threads/1464-Paq8pxd-dict?p=83831&viewfull=1#post83831
v107
    -Fix detection and compression on some jpeg files.
v106
    -Change mixer, so that there is minimum limit for update.
    -Add more StationaryMap contexts to jpegModel
    -Use larger update limit for some mixer context in jpegModel
    -Update lstm to v3
v105
    -Fix CD detection.
    -Fix MRB detection.
v104
    -in textModel also use regular word in stemmer
    -in wordModel, textModel use upper char flag from wrt 
    -DEC Alpha block-end fix from paq8px_v202
v103
    -in textModel use decoded word in stemmer to get real word type
v102
    -change ContextMap
    -adjust jpegModel mixer update
    -one context in WordModel
    -change indirectModel
        - split context into individual ContextMaps
    -add one mixer input in nestModel
v101
    -lstm +1 apm
    -in ContextMap2 add another input from run lenght
    -in ContextMap2 allow to select individual inputs for mixer
    -change option -e:
        -e0 - on text file do only capital letter conversion and escapes (file will be larger)
        -eX - where X > 0 use as minimum dynamic word frequency.
              -e19 recomended for files >1MB, -e124 for <1MB
              if wrt file is larger from source then transform is ignored